--- a/src/components/pages/cart/cart.css
+++ b/src/components/pages/cart/cart.css
@@ -43,10 +43,10 @@
   font-size: 20px;
 }
 
-.container-pay{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.container-pay {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .total-cart {
   padding: 30px;
@@ -65,4 +65,44 @@
   font-size: 25px;
   cursor: pointer;
   padding: 10px 30px;
+}
+
+.btn-trash {
+  background-color: rgb(250, 82, 82);
+  color: #eee;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border: 0;
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+.empty-item{
+  text-align: center;
+  padding: 180px;
+  font-size: 30px;
+}
+
+@media screen and (max-width: 500px) {
+  .container-cart {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .total-cart {
+    padding: 15px;
+    font-size: 15px;
+  }
+
+  .pay-cart {
+    font-size: 15px;
+  }
+  .empty-item{
+    font-size: 15px;
+    padding: 180px 80px;
+  }
 }
