--- a/src/components/pages/infoCard/infoCard.css
+++ b/src/components/pages/infoCard/infoCard.css
@@ -4,28 +4,23 @@
   padding: 80px;
   background-color: #fff;
 }
-.img-info {
-  width: 20%;
-}
 
 .content-info {
-  width: 80%;
   display: flex;
   flex-direction: column;
   gap: 1.25rem;
+  font-size: 20px;
 }
 
-.imgs {
-  width: 100%;
+.image-info {
+  width: 300px;
 }
 
 .info-dec {
-  font-size: 25px;
   color: gray;
 }
 
 .info-con {
-  font-size: 20px;
   width: 70%;
 }
 
@@ -54,4 +49,18 @@
 .filterImg img {
   width: 100px;
   height: 100px;
+}
+
+@media screen and (max-width: 768px) {
+  .container-info {
+    display: flex;
+    flex-direction: column;
+  }
+  .info-con {
+    width: 100%;
+  }
+
+  .info-add{
+    width: 100%;
+  }
 }
