--- a/src/components/pages/infoCard/infoCard.css
+++ b/src/components/pages/infoCard/infoCard.css
@@ -3,6 +3,7 @@
   align-items: center;
   padding: 80px;
   background-color: #fff;
+  gap: 80px;
 }
 
 .content-info {
@@ -55,6 +56,7 @@
   .container-info {
     display: flex;
     flex-direction: column;
+    gap: 0;
   }
   .info-con {
     width: 100%;
